[package]
name = "tide-validator"
version = "0.1.0"
description = "Data validator for Tide web framework"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
keywords = ["tide", "http", "web", "validator", "middleware"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bnjjj/tide-validator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.7.0"
futures = "0.3.4"
serde = { version = "1.0.106", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }

[dev-dependencies]
async-std = "1.5.0"
http = "0.2.1"
http-service-mock = "0.5.0"
http-service = "0.5.0"
serde_json = "1.0.51"
