[package]
name = "tide-validator"
version = "0.8.0"
description = "Data validator for Tide web framework"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
keywords = ["tide", "http", "web", "validator", "middleware"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bnjjj/tide-validator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1.0.64"

[dev-dependencies]
http = "0.2.4"
http-service-mock = "0.5.0"
http-service = "0.5.0"

